resolve collapsible menu disappering behind parallax

--- a/client/scss/components/_header.scss
+++ b/client/scss/components/_header.scss
@@ -43,7 +43,10 @@
 }
 
 #menu .show {
-  z-index: 2;
+  min-width: max-content;
+  position: absolute;
+  right: 2em;
+  z-index: 1;
   display: block;
   margin-left: 2em;
   background-color: white;   
